View Issue Details [ Jump to Notes ] [ Print ]
IDProjectCategoryView StatusDate SubmittedLast Update
0013130CMakeCMakepublic2012-04-13 17:042016-06-10 14:31
ReporterGehua yang 
Assigned ToKitware Robot 
PrioritynormalSeveritymajorReproducibilityalways
StatusclosedResolutionmoved 
PlatformWindowsOSWindowsOS Version7
Product VersionCMake 2.8.7 
Target VersionFixed in Version 
Summary0013130: Version is not set for executable or dll targets
DescriptionSET_TARGET_PROPERTIES( a PROPERTIES VERSION "1.2.3")

Such sentence does not seem to have any effect with a Windows Visual Studio build. A screen shot of Visual Studio to demonstrate the version is not being set in VS.
Steps To ReproduceA minimum example project was created to demo this issues. Files are enclosed.
TagsNo tags attached.
Attached Filespng file icon shot.png [^] (108,674 bytes) 2012-04-13 17:04


cxx file icon a.cxx [^] (77 bytes) 2012-04-13 17:04
txt file icon CMakeLists.txt [^] (158 bytes) 2012-04-13 17:04 [Show Content]
? file icon dumpbin-IDE.out [^] (6,125 bytes) 2012-04-16 11:56
? file icon dumpbin-nmake.out [^] (6,120 bytes) 2012-04-16 11:56

 Relationships

  Notes
(0029172)
Brad King (manager)
2012-04-16 09:18

Does it work in the NMake Makefiles generator?

The mapping of this property to IDE project file attributes may be missing.
(0029181)
Gehua yang (reporter)
2012-04-16 11:57
edited on: 2012-04-16 11:57

Indeed, The NMake does write the image version! The two dumpbin output of the executable headers are attached.

(0029182)
Brad King (manager)
2012-04-16 13:27

The generated NMake makefile build rules know how to write the version because the Modules/Platform/cl.cmake file tells CMake to use the /version:... option on the link line. The equivalent of this in the IDE project files is to write a <Version>...</Version> XML element at the proper point in the project file format. The change will probably go in cmLocalVisualStudio7Generator::OutputBuildTool and cmVisualStudio10TargetGenerator::WriteLinkOptions where they write the linker tool options.
(0042025)
Kitware Robot (administrator)
2016-06-10 14:28

Resolving issue as `moved`.

This issue tracker is no longer used. Further discussion of this issue may take place in the current CMake Issues page linked in the banner at the top of this page.

 Issue History
Date Modified Username Field Change
2012-04-13 17:04 Gehua yang New Issue
2012-04-13 17:04 Gehua yang File Added: shot.png
2012-04-13 17:04 Gehua yang File Added: a.cxx
2012-04-13 17:04 Gehua yang File Added: CMakeLists.txt
2012-04-16 09:18 Brad King Note Added: 0029172
2012-04-16 11:56 Gehua yang File Added: dumpbin-IDE.out
2012-04-16 11:56 Gehua yang File Added: dumpbin-nmake.out
2012-04-16 11:57 Gehua yang Note Added: 0029181
2012-04-16 11:57 Gehua yang Note Edited: 0029181
2012-04-16 13:27 Brad King Note Added: 0029182
2012-04-16 13:27 Brad King Status new => backlog
2016-06-10 14:28 Kitware Robot Note Added: 0042025
2016-06-10 14:28 Kitware Robot Status backlog => resolved
2016-06-10 14:28 Kitware Robot Resolution open => moved
2016-06-10 14:28 Kitware Robot Assigned To => Kitware Robot
2016-06-10 14:31 Kitware Robot Status resolved => closed


Copyright © 2000 - 2018 MantisBT Team