VS: Set the linker image version using the target's VERSION property

This matches the behavior of NMake, Ninja and older Visual Studio
generators.

Fixes: #13130